Add a running unit test with karma

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,14 +3,19 @@
   "globalstrict" : "false",
   "predef" : [
     "angular",
+    "console",
+    "_",
+
     "describe",
     "it",
     "expect",
-    "console",
-    "_",
+    "beforeEach",
+
     "require",
     "browser",
     "by",
-    "element"
+    "element",
+    "inject",
+    "module"
   ]
 }
