--- a/package.json
+++ b/package.json
@@ -16,18 +16,15 @@
     "angular-mocks": "^1.6.6",
     "angular-route": "^1.6.6",
     "lodash": "^4.17.4",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
   },
   "devDependencies": {
-
-    "grunt-karma": "^2.0.0",
-    "grunt-protractor-runner": "^5.0.0",
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
+    "grunt-karma": "^2.0.0",
+    "grunt-protractor-runner": "^5.0.0",
     "grunt-run": "^0.8.0",
-
     "jasmine-core": "^2.8.0",
-
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
@@ -37,8 +34,8 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
-
-    "protractor": "^5.1.2",
-    "phantomjs": "^2.1.7"
+    "karma-nightmare": "^0.4.10",
+    "phantomjs": "^2.1.7",
+    "protractor": "^5.1.2"
   }
 }
