Update travis to use yarn instead of npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ node_js:
   - "4"
 before_install:
 before_script:
-- npm install grunt
-- npm install
+- yarn install
 script:
   # should run both test-unit & test-e2e
   - grunt test
