--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "angular-mocks": "^1.6.6",
     "angular-route": "^1.6.6",
     "lodash": "^4.17.4",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^7.0.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
